updated about me section;

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
 	  
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
+    <nav class="navbar navbar-expand-md navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Vinay</a>
-	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
+	      <a class="navbar-brand" href="#">Vinay</a>
+	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="true" aria-label="Toggle navigation">
+	        <span class="oi oi-menu"></span>
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	          <!--<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
+	          <!--<li class="nav-item"><a href="#experience-section" class="nav-link"><span>Experience</span></a></li>
+	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>-->
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
@@ -65,7 +65,7 @@
 			            <h2 class="mb-4">A <span>Data Science</span> enthusiast, Mechanical Engineer</h2>
 			            <!--<p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>-->
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="mailto:gazulavinayram@gmail.com"><span class="icon-envelope"></span></a></li>
+							<li class="ftco-animate"><a href="mailto:gazulavinayram@gmail.com"><span class="icon-at"></span></a></li>
 							<li class="ftco-animate"><a href="#" target="_blank" rel="noopener noreferrer"><span class="icon-globe"></span></a></li>
 							<li class="ftco-animate"><a href="https://www.linkedin.com/in/vinayramg/" target="_blank" rel="noopener noreferrer"><span class="icon-linkedin"></span></a></li>
 							<li class="ftco-animate"><a href="https://github.com/vinay-ram1999" target="_blank" rel="noopener noreferrer"><span class="icon-github"></span></a></li>
@@ -113,23 +113,18 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-		            <ul class="about-info mt-4 px-md-0 px-2">
-		            	<li class="d-flex"><span>Name:</span> <span>Clark Thompson</span></li>
-		            	<li class="d-flex"><span>Date of birth:</span> <span>January 01, 1987</span></li>
-		            	<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
-		            	<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>clarkthomp@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
-		            </ul>
+		            <p>I am a dedicated Data Science graduate student at the New Jersey Institute of Technology, with over four years of programming experience and a strong passion for data-driven problem-solving. I am proficient in data engineering, exploratory data analysis, statistical modeling, machine learning, and deploying end-to-end solutions.</p>
+					<p>My academic and professional journey has been driven by a commitment to leveraging data and technology to uncover insights and drive informed decision-making. I continuously enhance my technical proficiency in programming, data structures, algorithms, and DevOps tools to adapt to the evolving demands of the tech industry.</p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
+				<!--
               	<p class="mb-4">
 	                <span class="number" data-number="120">0</span>
 	                <span>Project complete</span>
                 </p>
+				-->
                 <p><a href="files/master_resume.pdf" target="_blank" rel="noopener noreferrer" class="btn btn-primary py-3 px-3">Resume</a></p>
               </div>
 	          </div>
@@ -138,12 +133,13 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-no-pb" id="resume-section">
+	<!--
+    <section class="ftco-section ftco-no-pb" id="experience-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
-          	<h1 class="big big-2">Resume</h1>
-            <h2 class="mb-4">Resume</h2>
+          	<h1 class="big big-2">Experience</h1>
+            <h2 class="mb-4">Experience</h2>
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
           </div>
         </div>
@@ -197,7 +193,7 @@
     		</div>
     	</div>
     </section>
-	<!--
+	
     <section class="ftco-section" id="services-section">
     	<div class="container">
     		<div class="row justify-content-center py-5 mt-5">
@@ -359,8 +355,8 @@
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <h2 class="mb-4">Projects</h2>
+            <p>Here are some of the key projects I have worked on over the years.</p>
           </div>
         </div>
     		<div class="row">
@@ -569,13 +565,13 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://9085521879">+1 908-552-1879</a></p>
+	            <p><a href="tel://+19085521879">+1 908-552-1879</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-envelope"></span>
+          			<span class="icon-at"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
 	            <p><a href="mailto:gazulavinayram@gmail.com">gazulavinayram@gmail.com</a></p>
