restructured projects section;

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Education</h1>
             <h2 class="mb-4">Education</h2>
-            <p>My academic qualifications.</p>
+            <!--<p>My academic qualifications.</p>-->
           </div>
         </div>
     		<div class="row">
@@ -434,66 +434,15 @@
     <section class="ftco-section ftco-no-pb" id="projects-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Projects</h2>
-            <p>Here are some of the key projects I have worked on over the years.</p>
-          </div>
-        </div>
-        <div class="row d-flex">
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="projects/project7.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<!--<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>-->
-	                </p>
-                </div>
-                <h3 class="heading"><a href="projects/project7.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="projects/project6.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<!--<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>-->
-	                </p>
-                </div>
-                <h3 class="heading"><a href="projects/project6.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry">
-              <a href="projects/project5.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
-              	<div class="d-flex align-items-center mb-3 meta">
-	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<!--<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>-->
-	                </p>
-                </div>
-                <h3 class="heading"><a href="projects/project5.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-              </div>
-            </div>
-          </div>
+			<div class="col-md-7 heading-section text-center ftco-animate">
+				<h1 class="big big-2">Projects</h1>
+				<h2 class="mb-4">Projects</h2>
+			</div>
         </div>
       </div>
+	  <div class="text-center">
+		<p><a href="projects/projects.html" class="btn btn-primary py-3 px-3">View Projects</a></p>
+	  </div>
     </section>
 
 	<section class="ftco-section ftco-project ftco-no-pb" id="achievements-section">
@@ -692,14 +641,14 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 ftco-animate text-center">
 					<h2>I'm <span>Available</span> for freelancing</h2>
-					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+					<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>-->
 				</div>
 			</div>
 		</div>
 	</section>
 
-    <footer class="ftco-footer ftco-section">
+    <footer class="ftco-footer ftco-section ftco-no-pb">
       <div class="container">
 	  <!--
         <div class="row mb-5">
@@ -755,10 +704,10 @@
 
         <div class="row">
           <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+			<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            <p>
+				Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+			</p>
           </div>
         </div>
       </div>
