--- a/projects/project3.html
+++ b/projects/project3.html
@@ -59,32 +59,37 @@
       <div class="container">
         <div class="row no-gutters slider-text js-partialheight align-items-end justify-content-center">
           <div class="col-md-12 ftco-animate pb-5 mb-3 text-center">
-            <h1 class="mb-3 bread">Project Title</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="../index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="../index.html#projects-section">Projects <i class="ion-ios-arrow-forward"></i></a></span> <span>Project Title</span></p>
+            <h1 class="mb-3 bread project-title" project-number="3"></h1>
+            <p class="breadcrumbs">
+              <span class="mr-2">
+                <a href="../index.html#home-section">Home <i class="ion-ios-arrow-forward"></i></a>
+              </span>
+              <span class="mr-2">
+                <a href="projects.html">Projects <i class="ion-ios-arrow-forward"></i></a>
+              </span>
+              <span class="mr-2">
+                <a href="#" class="project-title" project-number="3"></a>
+              </span>
+            </p>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="ftco-section">
+    <section class="ftco-section ftco-no-pb" style="padding-top: 1em">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
             <h2 class="mb-3">Introduction</h2>
-            <p>
-              <img src="../images/image_3.jpg" alt="" class="img-fluid">
-            </p>
             <p>Introduce the project.</p>
+            <p><img src="images/image_3.jpg" alt="" class="img-fluid"></p>
             <h2 class="mb-3 mt-5">Next Section...</h2>
             <p>...</p>
-            <p>
-              <img src="../images/image_3.jpg" alt="" class="img-fluid">
-            </p>
             <p>...</p>
             <p>...</p>
           </div> <!-- .col-md-8 -->
 
-          <div class="col-lg-4 sidebar ftco-animate">
+          <div class="col-lg-4 sidebar ftco-animate ftco-no-pb">
             <div class="sidebar-box ftco-animate">
               <h3 class="heading-sidebar">Resources</h3>
               <ul class="ftco-sidebar-social">
@@ -118,13 +123,14 @@
       </div>
     </section> <!-- .section -->
 
-  <footer class="ftco-footer ftco-section">
+  <footer class="ftco-footer ftco-section ftco-no-pb">
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          <p>
             Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+          </p>
         </div>
       </div>
     </div>
