--- a/projects/projects.html
+++ b/projects/projects.html
@@ -59,16 +59,13 @@
       <div class="container">
         <div class="row no-gutters slider-text js-partialheight align-items-end justify-content-center">
           <div class="col-md-12 ftco-animate pb-5 mb-3 text-center">
-            <h1 class="mb-3 bread project-title" project-number="1"></h1>
+            <h1 class="mb-3 bread">Projects</h1>
             <p class="breadcrumbs">
               <span class="mr-2">
                 <a href="../index.html#home-section">Home <i class="ion-ios-arrow-forward"></i></a>
               </span>
               <span class="mr-2">
-                <a href="projects.html">Projects <i class="ion-ios-arrow-forward"></i></a>
-              </span>
-              <span class="mr-2">
-                <a href="#" class="project-title" project-number="1"></a>
+                <a href="#">Projects</a>
               </span>
             </p>
           </div>
@@ -76,65 +73,84 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-no-pb" style="padding-top: 1em">
+    <section class="ftco-section ftco-no-pb" id="projects-sub-section">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-8 ftco-animate">
-            <h2 class="mb-3">Introduction</h2>
-            <p>Introduce the project.</p>
-            <p><img src="images/image_1.jpg" alt="" class="img-fluid"></p>
-            <h2 class="mb-3 mt-5">Next Section...</h2>
-            <p>...</p>
-            <p>...</p>
-            <p>...</p>
-          </div> <!-- .col-md-8 -->
-
-          <div class="col-lg-4 sidebar ftco-animate ftco-no-pb">
-            <div class="sidebar-box ftco-animate">
-              <h3 class="heading-sidebar">Resources</h3>
-              <ul class="ftco-sidebar-social">
-                <li class="ftco-animate"><a href="#"><span class="icon-github"></span>GitHub Repository</a></li>
-                <li class="ftco-animate"><a href="#"><span class="fa fa-file-pdf-o" aria-hidden="true"></span>Project Report</a></li>
-                <li class="ftco-animate"><a href="#"><span class="fas fa-file-alt"></span>Publication</a></li>
-              </ul>
+        <div class="row d-flex">
+          <!--project3-->
+          <div class="col-md-4 d-flex ftco-animate">
+          <div class="blog-entry justify-content-end">
+            <a href="project3.html" class="block-20" style="background-image: url('images/image_3.jpg');"></a>
+            <div class="text mt-3 float-right d-block">
+              <div class="d-flex align-items-center mb-2 meta">
+              <p class="mb-0">
+                <span class="mr-2">March, 2024</span>
+                <!--<a href="#" class="mr-2">Admin</a>-->
+                <a href="https://github.com/vinay-ram1999/WebScraping-R" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                  <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/WebScraping-R">  
+                  <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/WebScraping-R">
+                </a>
+              </p>
             </div>
-            
-            <div class="sidebar-box ftco-animate">
-              <h3 class="heading-sidebar">Tech Stack</h3>
-              <div class="tagcloud">
-                <a class="tag-cloud-link">Python</a>
-                <a class="tag-cloud-link">office</a>
-                <a class="tag-cloud-link">building</a>
-                <a class="tag-cloud-link">land</a>
-                <a class="tag-cloud-link">table</a>
-                <a class="tag-cloud-link">interior</a>
-                <a class="tag-cloud-link">exterior</a>
-                <a class="tag-cloud-link">industrial</a>
-              </div>
-            </div>
-
-            <div class="sidebar-box ftco-animate">
-              <h3 class="heading-sidebar">Paragraph</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+            <h3 class="heading"><a class="project-title" project-number="3" href="project3.html"></a></h3>
+            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
             </div>
           </div>
-
+          </div>
+          <!--project2-->
+          <div class="col-md-4 d-flex ftco-animate">
+          <div class="blog-entry justify-content-end">
+            <a href="project2.html" class="block-20" style="background-image: url('images/image_2.jpg');"></a>
+            <div class="text mt-3 float-right d-block">
+              <div class="d-flex align-items-center mb-2 meta">
+              <p class="mb-0">
+                <span class="mr-2">February, 2023</span>
+                <!--<a href="#" class="mr-2">Admin</a>-->
+                <a href="https://github.com/vinay-ram1999/AlgoTrade-API" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                  <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/vinay-ram1999/AlgoTrade-API">  
+                  <img alt="GitHub forks" src="https://img.shields.io/github/forks/vinay-ram1999/AlgoTrade-API">
+                </a>
+              </p>
+            </div>
+            <h3 class="heading"><a class="project-title" project-number="2" href="project2.html"></a></h3>
+            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+            </div>
+          </div>
+          </div>
+          <!--project1-->
+          <div class="col-md-4 d-flex ftco-animate">
+          <div class="blog-entry">
+            <a href="project1.html" class="block-20" style="background-image: url('images/image_1.jpg');"></a>
+            <div class="text mt-3 float-right d-block">
+              <div class="d-flex align-items-center mb-2 meta">
+                <p class="mb-0">
+                  <span class="mr-2">March, 2020</span>
+                  <!--<a href="#" class="mr-2">Admin</a>-->
+                  <a href="https://github.com/UnstructuredFVM" target="_blank" rel="noopener noreferrer" class="meta-chat">
+                    <img alt="GitHub followers" src="https://img.shields.io/github/followers/UnstructuredFVM">
+                  </a>
+                </p>
+              </div>
+              <h3 class="heading"><a class="project-title" project-number="1" href="project1.html"></a></h3>
+              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+            </div>
+            </div>
+          </div>
         </div>
       </div>
-    </section> <!-- .section -->
+    </section>
 
-  <footer class="ftco-footer ftco-section ftco-no-pb">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          <p>
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-          </p>
+    <footer class="ftco-footer ftco-section ftco-no-pb">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+            <p>
+              Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
   <script src="../js/jquery.min.js"></script>
   <script src="../js/jquery-migrate-3.0.1.min.js"></script>
